--- a/app/src/main/res/layout/app_bar_home.xml
+++ b/app/src/main/res/layout/app_bar_home.xml
@@ -28,6 +28,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="bottom|end"
+            android:backgroundTint="@color/yellow"
             android:layout_margin="@dimen/fab_margin"
             app:borderWidth="0dp"
             app:srcCompat="@drawable/add_icon"
