--- a/app/src/main/res/layout/content_account.xml
+++ b/app/src/main/res/layout/content_account.xml
@@ -1,150 +1,191 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout
+<ScrollView
         xmlns:android="http://schemas.android.com/apk/res/android"
-        xmlns:tools="http://schemas.android.com/tools"
-        xmlns:app="http://schemas.android.com/apk/res-auto"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:background="@color/colorPrimary"
-        tools:context=".AccountActivity">
-
-
+        xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools"
+        android:layout_width="fill_parent"
+        android:layout_height="fill_parent"
+        android:fillViewport="true">
     <android.support.constraint.ConstraintLayout
-            android:layout_width="0dp"
-            android:background="@drawable/new_measurement_item"
-            android:layout_height="wrap_content"
-            android:id="@+id/constraintLayout2" android:padding="10dp"
-            app:layout_constraintTop_toTopOf="parent"
-            android:layout_marginTop="92dp"
-            app:layout_constraintStart_toStartOf="parent" android:layout_marginEnd="24dp"
-            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintHorizontal_bias="1.0"
-            android:layout_marginStart="24dp">
-        <TextView
-                android:text="@string/first_name"
+            xmlns:android="http://schemas.android.com/apk/res/android"
+            xmlns:tools="http://schemas.android.com/tools"
+            xmlns:app="http://schemas.android.com/apk/res-auto"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:background="@color/colorPrimary"
+            tools:context=".AccountActivity">
+
+
+        <androidx.constraintlayout.widget.Guideline
+                android:orientation="horizontal"
                 android:layout_width="wrap_content"
-                android:layout_height="24dp"
-                android:id="@+id/first_name_label"
-                android:textSize="18sp"
-                android:paddingRight="5dp"
+                android:layout_height="0dp" app:layout_constraintGuide_begin="48dp" android:id="@+id/guideline2"
+                app:layout_constraintTop_toTopOf="parent" android:layout_marginTop="48dp"/>
+        <android.support.constraint.ConstraintLayout
+                android:layout_width="0dp"
+                android:background="@drawable/new_measurement_item"
+                android:layout_height="wrap_content"
+                android:id="@+id/constraintLayout2" android:padding="10dp"
+                app:layout_constraintStart_toStartOf="parent" android:layout_marginEnd="24dp"
+                app:layout_constraintEnd_toEndOf="parent" app:layout_constraintHorizontal_bias="0.0"
+                android:layout_marginStart="24dp" android:layout_marginTop="60dp"
+                app:layout_constraintTop_toBottomOf="@+id/view2">
+            <TextView
+                    android:text="@string/first_name"
+                    android:layout_width="wrap_content"
+                    android:layout_height="24dp"
+                    android:id="@+id/first_name_label"
+                    android:textSize="18sp"
+                    android:paddingRight="5dp"
+                    app:layout_constraintStart_toStartOf="parent"
+                    android:layout_marginStart="8dp" android:layout_marginTop="8dp"
+                    app:layout_constraintTop_toTopOf="parent"/>
+            <TextView
+                    android:layout_width="0dp"
+                    android:layout_height="24dp"
+                    android:id="@+id/first_name_text"
+                    android:textSize="18sp"
+                    android:scrollbars="horizontal"
+                    android:scrollHorizontally="true"
+                    android:textColor="@color/white"
+                    android:maxLines="1"
+                    app:layout_constraintStart_toStartOf="@+id/first_name_label"
+                    app:layout_constraintTop_toBottomOf="@+id/first_name_label" android:layout_marginEnd="8dp"
+                    app:layout_constraintEnd_toEndOf="parent"/>
+            <TextView
+                    android:text="@string/last_name"
+                    android:layout_width="wrap_content"
+                    android:layout_height="24dp"
+                    android:scrollbars="horizontal"
+                    android:id="@+id/last_name_label" android:textSize="18sp"
+                    app:layout_constraintStart_toStartOf="@+id/first_name_text"
+                    app:layout_constraintTop_toBottomOf="@+id/first_name_text" android:layout_marginTop="8dp"/>
+            <TextView
+                    android:layout_width="0dp"
+                    android:layout_height="24dp"
+                    android:id="@+id/last_name_text"
+                    android:textSize="18sp"
+                    android:scrollbars="horizontal"
+                    android:maxLines="1"
+                    android:scrollHorizontally="true"
+                    android:textColor="@color/white"
+                    app:layout_constraintStart_toStartOf="@+id/last_name_label"
+                    app:layout_constraintTop_toBottomOf="@+id/last_name_label" android:layout_marginEnd="8dp"
+                    app:layout_constraintEnd_toEndOf="parent"/>
+            <TextView
+                    android:layout_width="0dp"
+                    android:layout_height="24dp"
+                    android:scrollbars="horizontal"
+                    android:maxLines="1"
+                    android:scrollHorizontally="true"
+                    android:id="@+id/email_text" android:textSize="18sp"
+                    android:textColor="@color/white"
+                    app:layout_constraintTop_toBottomOf="@+id/email_label"
+                    app:layout_constraintStart_toStartOf="@+id/email_label" android:layout_marginEnd="8dp"
+                    app:layout_constraintEnd_toEndOf="parent"/>
+            <TextView
+                    android:text="@string/email"
+                    android:layout_width="wrap_content"
+                    android:layout_height="24dp"
+                    android:id="@+id/email_label" android:textSize="18sp"
+                    app:layout_constraintStart_toStartOf="@+id/last_name_text"
+                    android:layout_marginTop="8dp"
+                    app:layout_constraintTop_toBottomOf="@+id/last_name_text"/>
+            <TextView
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:scrollbars="horizontal"
+                    android:maxLines="1"
+                    android:scrollHorizontally="true"
+                    android:id="@+id/verification_text" android:textSize="18sp"
+                    android:textColor="@color/white"
+                    app:layout_constraintStart_toStartOf="@+id/varification_label"
+                    app:layout_constraintTop_toBottomOf="@+id/varification_label"
+                    app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
+                    android:layout_marginBottom="8dp" app:layout_constraintBottom_toBottomOf="parent"
+                    app:layout_constraintVertical_bias="0.0"/>
+            <TextView
+                    android:text="@string/verification"
+                    android:layout_width="wrap_content"
+                    android:layout_height="24dp"
+                    android:id="@+id/varification_label" android:textSize="18sp"
+                    app:layout_constraintStart_toStartOf="@+id/email_text"
+                    android:layout_marginTop="8dp"
+                    app:layout_constraintTop_toBottomOf="@+id/email_text"/>
+        </android.support.constraint.ConstraintLayout>
+
+
+        <Button
+                android:text="@string/verify"
+                android:layout_width="0dp"
+                android:textAllCaps="false"
+                android:layout_height="wrap_content"
+                android:background="@drawable/register_button"
+                style="?android:attr/borderlessButtonStyle"
+                android:id="@+id/verify_button"
+                android:textColor="@color/white"
+                android:layout_marginTop="20dp"
+                app:layout_constraintTop_toBottomOf="@+id/constraintLayout2"
+                app:layout_constraintStart_toStartOf="@+id/constraintLayout2"
+                app:layout_constraintEnd_toEndOf="@+id/constraintLayout2" app:layout_constraintHorizontal_bias="0.0"
+                android:layout_marginBottom="24dp" app:layout_constraintBottom_toTopOf="@+id/change_details_button"
+                app:layout_constraintVertical_bias="0.0"/>
+
+        <Button
+                android:text="@string/update_details"
+                android:layout_width="0dp"
+                android:textAllCaps="false"
+                android:layout_height="wrap_content"
+                android:background="@drawable/register_button"
+                style="?android:attr/borderlessButtonStyle"
+                android:id="@+id/change_details_button"
+                android:textColor="@color/white"
+                app:layout_constraintStart_toStartOf="@+id/delete_account_button"
+                app:layout_constraintEnd_toEndOf="@+id/delete_account_button" android:layout_marginBottom="20dp"
+                app:layout_constraintBottom_toTopOf="@+id/delete_account_button"
+                app:layout_constraintHorizontal_bias="0.0"/>
+        <Button
+                android:text="@string/delete_account"
+                android:layout_width="0dp"
+                style="?android:attr/borderlessButtonStyle"
+                android:background="@drawable/delete_account_button"
+                android:layout_height="wrap_content"
+                android:id="@+id/delete_account_button"
+                android:textColor="@color/white"
+                android:textAllCaps="false"
+                app:layout_constraintStart_toStartOf="@+id/sign_out_button"
+                app:layout_constraintEnd_toEndOf="@+id/sign_out_button" android:layout_marginBottom="20dp"
+                app:layout_constraintBottom_toTopOf="@+id/sign_out_button" app:layout_constraintHorizontal_bias="0.0"/>
+        <Button
+                android:text="@string/sign_out"
+                android:layout_width="0dp"
+                style="?android:attr/borderlessButtonStyle"
+                android:background="@drawable/login_button"
+                android:textAllCaps="false"
+                android:layout_height="48dp"
+                android:id="@+id/sign_out_button"
+                android:textColor="@color/white"
+                android:layout_marginBottom="24dp"
+                app:layout_constraintBottom_toBottomOf="parent"
+                android:layout_marginStart="24dp" app:layout_constraintStart_toStartOf="parent"
+                android:layout_marginEnd="24dp" app:layout_constraintEnd_toEndOf="parent"/>
+        <android.support.v7.widget.CardView
+                android:layout_width="80dp"
+                android:layout_height="80dp"
+                android:elevation="12dp"
+                android:id="@+id/view2"
+                app:cardCornerRadius="40dp"
+                android:layout_centerHorizontal="true" android:layout_marginEnd="8dp"
+                app:layout_constraintEnd_toEndOf="parent" android:layout_marginStart="8dp"
                 app:layout_constraintStart_toStartOf="parent"
-                android:layout_marginStart="8dp" android:layout_marginTop="8dp"
-                app:layout_constraintTop_toTopOf="parent"/>
-        <TextView
-                android:layout_width="222dp"
-                android:layout_height="0dp"
-                android:id="@+id/first_name_text"
-                android:textSize="18sp"
-                android:scrollbars="horizontal"
-                android:scrollHorizontally="true"
-                android:textColor="@color/white"
-                android:maxLines="1"
-                app:layout_constraintTop_toTopOf="@+id/first_name_label"
-                app:layout_constraintBottom_toBottomOf="@+id/first_name_label"
-                app:layout_constraintVertical_bias="0.0" app:layout_constraintStart_toEndOf="@+id/first_name_label"
-                android:layout_marginStart="8dp"/>
-        <TextView
-                android:text="@string/last_name"
-                android:layout_width="wrap_content"
-                android:layout_height="24dp"
-                android:scrollbars="horizontal"
-                android:id="@+id/last_name_label" android:textSize="18sp"
-                android:layout_marginTop="16dp"
-                app:layout_constraintTop_toBottomOf="@+id/first_name_label"
-                app:layout_constraintEnd_toEndOf="@+id/first_name_label"/>
-        <TextView
-                android:layout_width="0dp"
-                android:layout_height="0dp"
-                android:id="@+id/last_name_text"
-                android:textSize="18sp"
-                android:scrollbars="horizontal"
-                android:maxLines="1"
-                android:scrollHorizontally="true"
-                android:textColor="@color/white"
-                app:layout_constraintTop_toTopOf="@+id/last_name_label"
-                app:layout_constraintBottom_toBottomOf="@+id/last_name_label" app:layout_constraintVertical_bias="0.0"
-                app:layout_constraintStart_toStartOf="@+id/first_name_text"
-                app:layout_constraintEnd_toEndOf="@+id/first_name_text"/>
-        <TextView
-                android:layout_width="0dp"
-                android:layout_height="0dp"
-                android:scrollbars="horizontal"
-                android:maxLines="1"
-                android:scrollHorizontally="true"
-                android:id="@+id/email_text" android:textSize="18sp"
-                android:textColor="@color/white"
-                app:layout_constraintTop_toTopOf="@+id/email_label"
-                app:layout_constraintBottom_toBottomOf="@+id/email_label" app:layout_constraintVertical_bias="0.0"
-                app:layout_constraintStart_toStartOf="@+id/last_name_text"
-                app:layout_constraintEnd_toEndOf="@+id/last_name_text"/>
-        <TextView
-                android:text="@string/email"
-                android:layout_width="wrap_content"
-                android:layout_height="24dp"
-                android:id="@+id/email_label" android:textSize="18sp"
-                android:layout_marginTop="16dp"
-                app:layout_constraintTop_toBottomOf="@+id/last_name_label"
-                app:layout_constraintEnd_toEndOf="@+id/last_name_label"/>
-        <TextView
-                android:layout_width="0dp"
-                android:layout_height="24dp"
-                android:scrollbars="horizontal"
-                android:maxLines="1"
-                android:scrollHorizontally="true"
-                android:id="@+id/verification_text" android:textSize="18sp"
-                android:textColor="@color/white"
-                app:layout_constraintStart_toStartOf="@+id/email_text" android:layout_marginTop="16dp"
-                app:layout_constraintTop_toBottomOf="@+id/email_text"
-                app:layout_constraintEnd_toEndOf="@+id/email_text" android:layout_marginBottom="8dp"
-                app:layout_constraintBottom_toBottomOf="parent"/>
-        <TextView
-                android:text="@string/verification"
-                android:layout_width="wrap_content"
-                android:layout_height="24dp"
-                android:id="@+id/varification_label" android:textSize="18sp"
-                app:layout_constraintEnd_toEndOf="@+id/email_label"
-                app:layout_constraintTop_toBottomOf="@+id/email_label" android:layout_marginTop="16dp"
-                app:layout_constraintBottom_toBottomOf="parent" android:layout_marginBottom="8dp"/>
+                android:layout_marginTop="60dp" app:layout_constraintTop_toTopOf="@+id/guideline2">
+            <ImageView
+                    android:layout_height="80dp"
+                    android:layout_width="match_parent"
+                    android:id="@+id/imageView1"
+                    android:src="@drawable/avatar"
+                    android:scaleType="centerCrop"/>
+        </android.support.v7.widget.CardView>
+
+
     </android.support.constraint.ConstraintLayout>
-
-
-    <Button
-            android:text="@string/update_details"
-            android:layout_width="0dp"
-            android:textAllCaps="false"
-            android:layout_height="wrap_content"
-            android:background="@drawable/register_button"
-            style="?android:attr/borderlessButtonStyle"
-            android:id="@+id/change_details_button"
-            android:textColor="@color/white"
-            app:layout_constraintStart_toStartOf="@+id/delete_account_button"
-            app:layout_constraintEnd_toEndOf="@+id/delete_account_button" android:layout_marginBottom="20dp"
-            app:layout_constraintBottom_toTopOf="@+id/delete_account_button"
-            app:layout_constraintHorizontal_bias="0.0"/>
-    <Button
-            android:text="@string/delete_account"
-            android:layout_width="0dp"
-            style="?android:attr/borderlessButtonStyle"
-            android:background="@drawable/delete_account_button"
-            android:layout_height="wrap_content"
-            android:id="@+id/delete_account_button"
-            android:textColor="@color/white"
-            android:textAllCaps="false"
-            app:layout_constraintStart_toStartOf="@+id/sign_out_button"
-            app:layout_constraintEnd_toEndOf="@+id/sign_out_button" android:layout_marginBottom="20dp"
-            app:layout_constraintBottom_toTopOf="@+id/sign_out_button" app:layout_constraintHorizontal_bias="0.0"/>
-    <Button
-            android:text="@string/sign_out"
-            android:layout_width="0dp"
-            style="?android:attr/borderlessButtonStyle"
-            android:background="@drawable/login_button"
-            android:textAllCaps="false"
-            android:layout_height="48dp"
-            android:id="@+id/sign_out_button"
-            android:textColor="@color/white"
-            android:layout_marginBottom="40dp"
-            app:layout_constraintBottom_toBottomOf="parent"
-            android:layout_marginStart="24dp" app:layout_constraintStart_toStartOf="parent"
-            android:layout_marginEnd="24dp" app:layout_constraintEnd_toEndOf="parent"/>
-
-
-</android.support.constraint.ConstraintLayout>
+</ScrollView>
