--- a/app/src/main/res/layout/hint_item_layout.xml
+++ b/app/src/main/res/layout/hint_item_layout.xml
@@ -13,10 +13,11 @@
                 android:layout_width="0dp"
                 android:layout_height="wrap_content" android:id="@+id/hint_text_view"
                 android:textSize="14sp"
+                android:breakStrategy="simple"
                 app:layout_constraintTop_toTopOf="parent" android:layout_marginTop="16dp"
                 app:layout_constraintBottom_toBottomOf="parent" android:layout_marginBottom="16dp"
                 app:layout_constraintVertical_bias="0.0"
-                android:text="@string/measure_more_hint" android:layout_marginEnd="16dp"
+                android:text="" android:layout_marginEnd="16dp"
                 app:layout_constraintEnd_toEndOf="parent" android:layout_marginStart="16dp"
                 app:layout_constraintStart_toStartOf="parent" android:gravity="center"/>
     </android.support.constraint.ConstraintLayout>
