--- a/app/src/main/res/layout/activity_measurement_view.xml
+++ b/app/src/main/res/layout/activity_measurement_view.xml
@@ -53,6 +53,15 @@
                     android:layout_marginTop="24dp" android:layout_marginBottom="24dp"
                     app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="16dp"
                     android:textSize="24sp"/>
+            <ProgressBar
+                    style="?android:attr/progressBarStyle"
+                    android:layout_width="43dp"
+                    android:layout_height="36dp"
+                    android:id="@+id/bgc_progress_bar" android:layout_marginTop="8dp"
+                    app:layout_constraintTop_toTopOf="parent" android:layout_marginBottom="8dp"
+                    app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent"
+                    android:layout_marginEnd="8dp" app:layout_constraintStart_toStartOf="parent"
+                    android:layout_marginStart="8dp"/>
 
 
         </android.support.constraint.ConstraintLayout>
@@ -337,6 +346,16 @@
                 app:layout_constraintTop_toBottomOf="@+id/notes_layout" app:layout_constraintHorizontal_bias="0.0"
                 android:layout_marginBottom="40dp" app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintVertical_bias="1.0"/>
+        <ProgressBar
+                style="?android:attr/progressBarStyle"
+                android:layout_width="70dp"
+                android:layout_height="69dp"
+                android:id="@+id/time_progress_bar" app:layout_constraintStart_toStartOf="parent"
+                android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent"
+                android:layout_marginEnd="8dp" android:layout_marginTop="8dp"
+                app:layout_constraintTop_toTopOf="@+id/time_text_view" android:layout_marginBottom="8dp"
+                app:layout_constraintBottom_toBottomOf="@+id/date_text_view" tools:visibility="visible"
+                android:visibility="visible"/>
 
 
     </android.support.constraint.ConstraintLayout>
